syntax = "proto3";

option java_package = "stubs";
option java_multiple_files = true;

import "memory_massage.proto";

message Filter{
  double max_price_usd = 1;
  uint32 min_cpu_cores = 2;
  double min_cpu_ghz = 3;
  Memory min_ram = 4;
}
