syntax = "proto3";

option java_package = "stubs";
option java_multiple_files = true;

import "laptop_message.proto";

message CreateLaptopRequest{Laptop laptop = 1;}

message CreateLaptopResponse{string id = 1;}

service LaptopService{
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse){}
}
